--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -268,7 +268,7 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QGraphicsView" name="graphicsView_2">
+    <widget class="QLabel" name="previewRc">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -277,17 +277,20 @@
        <height>161</height>
       </rect>
      </property>
-     <property name="backgroundBrush">
-      <brush brushstyle="NoBrush">
-       <color alpha="255">
-        <red>0</red>
-        <green>0</green>
-        <blue>0</blue>
-       </color>
-      </brush>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
-     <property name="interactive">
-      <bool>false</bool>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Sunken</enum>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </widget>
@@ -372,7 +375,6 @@
   <tabstop>radRc</tabstop>
   <tabstop>radPal</tabstop>
   <tabstop>cbxNewPal</tabstop>
-  <tabstop>graphicsView_2</tabstop>
  </tabstops>
  <resources/>
  <connections/>
