Add a Save item to File menu

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -243,6 +243,8 @@
      <string>&amp;File</string>
     </property>
     <addaction name="action_Open"/>
+    <addaction name="action_Save"/>
+    <addaction name="separator"/>
     <addaction name="action_Quit"/>
    </widget>
    <widget class="QMenu" name="menu_Help">
@@ -287,6 +289,14 @@
   <action name="actionAbout_Morning_Star">
    <property name="text">
     <string>About &amp;Morning Star...</string>
+   </property>
+  </action>
+  <action name="action_Save">
+   <property name="text">
+    <string>&amp;Save...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
  </widget>
