--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -271,6 +271,10 @@
    </attribute>
   </widget>
   <action name="action_Open">
+   <property name="icon">
+    <iconset resource="morningstar.qrc">
+     <normaloff>:/rsrc/document-open.png</normaloff>:/rsrc/document-open.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Open</string>
    </property>
@@ -279,6 +283,10 @@
    </property>
   </action>
   <action name="action_Quit">
+   <property name="icon">
+    <iconset resource="morningstar.qrc">
+     <normaloff>:/rsrc/application-exit.png</normaloff>:/rsrc/application-exit.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Quit</string>
    </property>
@@ -292,6 +300,10 @@
    </property>
   </action>
   <action name="action_Save">
+   <property name="icon">
+    <iconset resource="morningstar.qrc">
+     <normaloff>:/rsrc/document-save-as.png</normaloff>:/rsrc/document-save-as.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Save...</string>
    </property>
@@ -307,6 +319,8 @@
   <tabstop>radPal</tabstop>
   <tabstop>cbxNewPal</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="morningstar.qrc"/>
+ </resources>
  <connections/>
 </ui>
