--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>559</width>
-    <height>261</height>
+    <width>557</width>
+    <height>259</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>557</width>
+    <height>259</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Morning Star</string>
@@ -185,16 +191,6 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0" colspan="3">
-     <widget class="QProgressBar" name="progressBar">
-      <property name="value">
-       <number>100</number>
-      </property>
-      <property name="textVisible">
-       <bool>false</bool>
-      </property>
-     </widget>
-    </item>
     <item row="4" column="3">
      <widget class="QDialogButtonBox" name="buttonBox">
       <property name="standardButtons">
@@ -209,7 +205,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>559</width>
+     <width>557</width>
      <height>21</height>
     </rect>
    </property>
