--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Morning Star</string>
+   <string>Wesnoth RCX</string>
   </property>
   <property name="windowIcon">
    <iconset resource="morningstar.qrc">
@@ -257,7 +257,7 @@
   </action>
   <action name="actionAbout_Morning_Star">
    <property name="text">
-    <string>About &amp;Morning Star...</string>
+    <string>About Wesnoth &amp;RCX...</string>
    </property>
   </action>
   <action name="action_Save">
