Added support for dropping images or paths to images into the interface

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,6 +16,9 @@
     <height>259</height>
    </size>
   </property>
+  <property name="acceptDrops">
+   <bool>true</bool>
+  </property>
   <property name="windowTitle">
    <string>Wesnoth RCX</string>
   </property>
