Larger icon for the About dialog

--- a/morningstar.qrc
+++ b/morningstar.qrc
@@ -4,5 +4,6 @@
         <file>rsrc/document-open.png</file>
         <file>rsrc/document-save-as.png</file>
         <file>rsrc/app.png</file>
+        <file>rsrc/rcx-icon.png</file>
     </qresource>
 </RCC>
