--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>557</width>
+    <width>567</width>
     <height>259</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>557</width>
+    <width>567</width>
     <height>259</height>
    </size>
   </property>
@@ -31,7 +31,7 @@
     <item row="0" column="0" rowspan="3">
      <widget class="QLabel" name="previewOriginal">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -77,10 +77,10 @@
       </item>
      </layout>
     </item>
-    <item row="0" column="2" rowspan="3" colspan="2">
+    <item row="0" column="2" rowspan="3">
      <widget class="QLabel" name="previewRc">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -106,6 +106,12 @@
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QRadioButton" name="radRc">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="whatsThis">
          <string>Selects color range-based (a.k.a. &quot;team color&quot;) recoloring.</string>
         </property>
@@ -116,6 +122,12 @@
       </item>
       <item>
        <widget class="QRadioButton" name="radPal">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="toolTip">
          <string>Selects palette switching mode, to replace original colors with new ones using a color values list instead of ranges.</string>
         </property>
@@ -129,7 +141,7 @@
     <item row="2" column="1">
      <widget class="QStackedWidget" name="staFunctionOpts">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -148,7 +160,7 @@
          </rect>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -191,14 +203,14 @@
       </widget>
      </widget>
     </item>
-    <item row="3" column="0" colspan="4">
+    <item row="3" column="0" colspan="3">
      <widget class="Line" name="line">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
-    <item row="4" column="3">
+    <item row="4" column="2">
      <widget class="QDialogButtonBox" name="buttonBox">
       <property name="standardButtons">
        <set>QDialogButtonBox::Close|QDialogButtonBox::Save</set>
@@ -212,7 +224,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>557</width>
+     <width>567</width>
      <height>21</height>
     </rect>
    </property>
