--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -221,6 +221,9 @@
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QToolButton" name="tbZoomOut">
+        <property name="whatsThis">
+         <string>Reduces the zoom level.</string>
+        </property>
         <property name="text">
          <string>-</string>
         </property>
@@ -228,6 +231,9 @@
       </item>
       <item>
        <widget class="QComboBox" name="cbxZoomFactor">
+        <property name="whatsThis">
+         <string>Allows to choose the view's zoom level.</string>
+        </property>
         <property name="editable">
          <bool>false</bool>
         </property>
@@ -235,6 +241,9 @@
       </item>
       <item>
        <widget class="QToolButton" name="tbZoomIn">
+        <property name="whatsThis">
+         <string>Increases the zoom level.</string>
+        </property>
         <property name="text">
          <string>+</string>
         </property>
