--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,7 @@
    <string>Wesnoth RCX</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="morningstar.qrc">
     <normaloff>:/rsrc/app.png</normaloff>:/rsrc/app.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
@@ -286,7 +286,7 @@
      <x>0</x>
      <y>0</y>
      <width>567</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -305,6 +305,9 @@
     <addaction name="actionAbout_Morning_Star"/>
    </widget>
    <widget class="QMenu" name="menu_Tools">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="title">
      <string>&amp;Tools</string>
     </property>
@@ -348,6 +351,9 @@
    <property name="text">
     <string>Custom color &amp;ranges...</string>
    </property>
+   <property name="visible">
+    <bool>true</bool>
+   </property>
   </action>
   <action name="action_Palettes">
    <property name="text">
@@ -364,6 +370,8 @@
   <tabstop>cbxNewPal</tabstop>
   <tabstop>buttonBox</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="morningstar.qrc"/>
+ </resources>
  <connections/>
 </ui>
