Re-enable the Tools menu now that we branched away 0.1.x

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -306,7 +306,7 @@
    </widget>
    <widget class="QMenu" name="menu_Tools">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="title">
      <string>&amp;Tools</string>
