CustomRanges: assign buddies and keyboard accels

--- a/customranges.ui
+++ b/customranges.ui
@@ -118,7 +118,10 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Identifier:</string>
+        <string>&amp;Identifier:</string>
+       </property>
+       <property name="buddy">
+        <cstring>leId</cstring>
        </property>
       </widget>
      </item>
@@ -132,7 +135,10 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Name:</string>
+        <string>&amp;Name:</string>
+       </property>
+       <property name="buddy">
+        <cstring>leName</cstring>
        </property>
       </widget>
      </item>
@@ -146,7 +152,10 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Average:</string>
+        <string>A&amp;verage:</string>
+       </property>
+       <property name="buddy">
+        <cstring>leAvg</cstring>
        </property>
       </widget>
      </item>
@@ -171,7 +180,10 @@
      <item row="3" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Highlight:</string>
+        <string>&amp;Highlight:</string>
+       </property>
+       <property name="buddy">
+        <cstring>leMax</cstring>
        </property>
       </widget>
      </item>
@@ -196,7 +208,10 @@
      <item row="4" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
-        <string>Shadow:</string>
+        <string>&amp;Shadow:</string>
+       </property>
+       <property name="buddy">
+        <cstring>leMin</cstring>
        </property>
       </widget>
      </item>
